5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/224/users/4347/executions/1596_1017.log
== TEST (2019-04-02 09:04:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:04:24) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- EXECUTION TIME:
0.16667
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:04:27) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- ERROR:
File "XXXX", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:04:47) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print round(distancia, 2)

-- ERROR:
File "XXXX", line 11
    print round(distancia, 2)
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:05:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print round(distancia, 2)

-- EXECUTION TIME:
0.132905
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print round(distancia, 2)
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:06:40) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- ERROR:
File "XXXX", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:06:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round "distancia, 2")

-- ERROR:
File "XXXX", line 11
    print(round "distancia, 2")
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:07:58) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis, 2))

-- EXECUTION TIME:
0.162649
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:08:56) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis, 2))

-- ERROR:
File "XXXX", line 11
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:08:59) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* arccos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis, 2))

-- ERROR:
File "XXXX", line 11
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:09:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis, 2))

-- ERROR:
File "XXXX", line 11
    print(round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:10:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
round(dis, 2))

-- ERROR:
File "XXXX", line 11
    round(dis, 2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:10:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis,5))

-- EXECUTION TIME:
0.170071
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(dis,5))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:11:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis,2))

-- EXECUTION TIME:
0.180093
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(dis,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:11:02) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis,2))

-- ERROR:
File "XXXX", line 11
    print(round(dis,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:11:46) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis,2))

-- EXECUTION TIME:
0.143158
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(dis,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:11:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
dis= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(dis,2))

-- ERROR:
File "XXXX", line 11
    print(round(dis,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:14:19) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print (round(distancia, 5))

-- ERROR:
File "XXXX", line 11
    print (round(distancia, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:14:30) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 5))

-- ERROR:
File "XXXX", line 11
    print(round(distancia, 5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:15:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,  5))

-- ERROR:
File "XXXX", line 11
    print(round(distancia,  5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:15:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,5))

-- ERROR:
File "XXXX", line 11
    print(round(distancia,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:15:50) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(R ,5))

-- EXECUTION TIME:
0.179804
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(R ,5))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:15:54) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(R ,5))

-- ERROR:
File "XXXX", line 11
    print(round(R ,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:16:09) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,5))

-- ERROR:
File "XXXX", line 11
    print(round(distancia,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:16:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians (float(input(" Latitude de G1: ")))
t2= radians (float(input ("Latitude de T2: ")))
g2= radians (float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(float(distancia,5))

-- ERROR:
File "XXXX", line 11
    print(float(distancia,5))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 09:22:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input(" Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.181461
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:23:28) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input(" Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:26:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input(" Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print"round(distancia,2)"

-- ERROR:
File "XXXX", line 11
    print"round(distancia,2)"
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-04-02 09:27:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input(" Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- ERROR:
File "XXXX", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 10:13:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de P1: ")))
g1= radians(float(input(" Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G1: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.178736
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:59:07) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de T1: ")))
g1= radians(float(input(" Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G2: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.157616
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 12:59:16) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de T1: ")))
g1= radians(float(input(" Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G2: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.157435
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:00:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de T1: ")))
g1= radians(float(input("Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G2: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.251073
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:00:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de T1: ")))
g1= radians(float(input("Latitude de G1: ")))
t2= radians(float(input ("Latitude de T2: ")))
g2= radians(float(input("Latitude de G2: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.147915
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:01:26) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1 = radians(float(input("Latitude de t1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.158012
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:02:14) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1= radians(float(input("Latitude de t1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
R= 6371.01
distancia= R* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.195379
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:03:01) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1= radians(float(input("Latitude de t1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio* acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.162859
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:03:10) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1= radians(float(input("Latitude de t1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia,2))

-- EXECUTION TIME:
0.164599
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia,2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:04:49) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1= radians(float(input("Latitude de t1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- EXECUTION TIME:
0.116602
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:04:53) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1= radians(float(input("Latitude de t1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio * acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- EXECUTION TIME:
0.192932
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:05:11) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1= radians(float(input("Latitude de t1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio * (acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- EXECUTION TIME:
0.207744
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:05:32) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import *
t1= radians(float(input("Latitude de t1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio*(acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- EXECUTION TIME:
0.160938
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:09:15) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de p1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- EXECUTION TIME:
0.197958
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:09:20) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de p1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- EXECUTION TIME:
0.20193
-- ERROR:
  File "/home/codebench/codes/1596/1017/main.py", line 11
    print(round(distancia, 2))
        ^
SyntaxError: invalid syntax

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:09:34) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de p1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio*acos(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2)
print(round(distancia, 2))

-- EXECUTION TIME:
0.193642
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
-556.39
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-04-02 13:11:08) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import*
t1= radians(float(input("Latitude de p1: ")))
g1= radians(float(input("Latitude de g1: ")))
t2= radians(float(input ("Latitude de t2: ")))
g2= radians(float(input("Latitude de g2: ")))
raio= 6371.01
distancia= raio*acos(sin(t1)*sin(t2)+cos(t1)*cos(t2)*cos(g1-g2))
print(round(distancia, 2))

-- EXECUTION TIME:
0.143594
-- TEST CASE 1:
---- input:
-3.036131
-60.04585
-3.088496
-59.59464
---- correct output:
50.44
---- user output:
50.44
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
